# reversi-game-py

./: LICENSE  README.md  exceptions.py  main.py  pyproject.toml  reversi.py
src/reversi_game/: __main__.py  color.py  reversi.py
