[tool.poetry]
name = "reversi-game"
version = "0.1.0"
description = "Python implementation of scaleable reversi game"
authors = ["AAAR-Salmon <aaar-salmon@example.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/AAAR-Salmon/reversi-game-py"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.23,<2"

[tool.poetry.dev-dependencies]
autopep8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
